--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-	<title>hello coursera</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<meta charset="utf-8">   
+	<meta name="viewort" content="width=device-width initial-scale=1"> 
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+	<title>bootstrap starter page</title>
 </head>
 <body>
-	<h1>hello coursera</h1>
+	<h1>hello course</h1>
+	
 </body>
 </html>
