--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta charset="utf-8">   
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-	<title>bootstrap starter page</title>
+	<title>html and css test</title>
 </head>
 <body>
 	<h1>Our menu</h1>
