--- a/site/index.html
+++ b/site/index.html
@@ -1,33 +1,115 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta charset="utf-8">   
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<title>html and css test</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<h1>Our menu</h1>
-	<div class="row">
-		<section class="col-lg-4 col-md-6 col-sm-12"><div id="div1">Chicken</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</section>
-		<section class="col-lg-4 col-md-6 col-sm-12"><div id="div2">Beef</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</section>
-		<section class="col-lg-4 col-md-12 col-sm-12"><div id="div3">Sushi</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</section>
+	<script src="bootstrap-3.3.7-dist/js/jquery-3.6.1.min.js"></script>
+	<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+	<script src="script.js"></script>
+	<!--navigation-->
+	<nav class="navbar navbar-default">
+  		<div class="container-fluid nav-container">
+			<div class="navbar-header">
+	      			<a class="navbar-brand" href="index.html">
+	        			<img id="brand" alt="Brand" src="downloadforweb.png" width="100px">
+	        			<a  class="nav-test" href="index.html"><span>SAINT JOSEPH<br class="visible-xs"> SCHOOL<br><span class="hidden-xs">ADDIS ABABA</span></span></a>
+	      			</a> 
+	    			<form class="navbar-form navbar-left hidden-xs" role="search">
+	  					<div class="form-group">
+	    					<input type="text" class="form-control" placeholder="Search">
+	  					</div>
+	  					<button type="submit" class="btn btn-default">Submit</button>
+					</form>
+					<button class="glyphicon glyphicon-search visible-xs edit"></button>	
+	    		</div>  
+	      		    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+	        			<span class="sr-only">Toggle navigation</span>
+	        			<span class="icon-bar"></span>
+	        			<span class="icon-bar"></span>
+	        			<span class="icon-bar"></span>
+	      			</button-->
+  			</div>
+	</nav>
+	<!--end of navigation-->
+	<!--slide show-->
+	<div class="slideshow-container">
+
+	<div class="mySlides fade check">
+	  <div class="numbertext">1 / 3</div>
+	  <img class="body-img" src="photo3.jpg" style="width:100%">
+		<div class="body-img" style="text-align:center">
+ 		  <span class="dot"></span> 
+		  <span class="dot"></span> 
+		  <span class="dot"></span> 
+		</div>
+	</div>
+
+	<div class="mySlides fade">
+	  <div class="numbertext check">2 / 3</div>
+	  <img class="body-img" src="photo2.jpg" style="width: 100%">
+		<div style="text-align:center">
+ 		  <span class="dot"></span> 
+		  <span class="dot"></span> 
+		  <span class="dot"></span> 
+		</div>
+	</div>
+
+	<div class="mySlides fade check">
+	  <div class="numbertext">3 / 3</div>
+	    <img class="body-img" src="photo3.jpg" style="width:100%">
+		<div style="text-align:center">
+ 		  <span class="dot"></span> 
+		  <span class="dot"></span> 
+		  <span class="dot"></span> 
+		</div>
+	  </div>
+    </div>
+
+	<script>
+	let slideIndex = 0;
+	showSlides();
+
+	function showSlides() {
+	  let i;
+	  let slides = document.getElementsByClassName("mySlides");
+	  let dots = document.getElementsByClassName("dot");
+	  for (i = 0; i < slides.length; i++) {
+	    slides[i].style.display = "none";  
+	  }
+	  slideIndex++;
+	  if (slideIndex > slides.length) {slideIndex = 1}    
+	  for (i = 0; i < dots.length; i++) {
+	    dots[i].className = dots[i].className.replace(" active", "");
+	  }
+	  slides[slideIndex-1].style.display = "block";  
+	  dots[slideIndex-1].className += " active";
+	  setTimeout(showSlides, 2000); // Change image every 2 seconds
+	}
+	</script>
+	<!--end of slide show-->
+	<!--main content-->
+	<div class="hr-respone">
+		<h2 class="hr-lines">Welcome</h2>
+	</div>
+	<br>
+	<div class="container conatiner-margin">
+		<div class="row rowanchor">
+			<section id="secondlogo" class="col-sm-4 col-xs-6"><span class="secondlogo">La<span class="glyphicon glyphicon-star font"></span>Salle</span></section>
+			<section id="mission" class="col-sm-4 col-xs-6"><div class="headmission">Our Mission</div><div class="side">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate.</div></section>
+			<div class="col-sm-4 hidden-xs left">
+				<img id="bodyimg" src="bodyimg.JPG" width="100%" height="100%">
+			</div>
+		</div>
 	</div>
 </body>
 </html>
