--- a/site/index.html
+++ b/site/index.html
@@ -43,7 +43,7 @@
 
 	<div class="mySlides fade check">
 	  <div class="numbertext">1 / 3</div>
-	  <img class="body-img" src="photo3.jpg" style="width:100%">
+	  <img class="body-img" src="photo.jpg" style="width:100%">
 		<div class="body-img" style="text-align:center">
  		  <span class="dot"></span> 
 		  <span class="dot"></span> 
@@ -105,7 +105,7 @@
 			<section id="mission" class="col-sm-4 col-xs-6"><div class="headmission">Our Mission</div><div class="side">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate.</div></section>
+			consequat. Duis aute irure dolor in reprehenderit in voluptate.<br><span class="new-try">La<span class="glyphicon glyphicon-star"></span>salle</span></div></section>
 			<div class="col-sm-4 hidden-xs left">
 				<img id="bodyimg" src="bodyimg.JPG" width="100%" height="100%">
 			</div>
